@@ -22,6 +22,8 @@ v0.61.1		20-Jun-2004.
 	mbsebbs:
 		Added user@domain login for pop3 mailboxes.
 		If pop3 login fails, the bbs won't hang.
+		If a users homedirectory doesn't exist, a correct error message
+		is displayed and logged.
 
 	mbsetup:
 		Added user@domain login for pop3 servers in screen 1.12.
